Added LinkedIn icon link

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -3,7 +3,9 @@
         <div class="f-info-socials">
            <i class="fa-brands fa-square-facebook"></i>
            <i class="fa-brands fa-square-instagram"></i>
-           <i class="fa-brands fa-linkedin"></i>
+           <a href="https://www.linkedin.com/company/ty_listing_123_airbnb/about/?viewAsMember=true" >
+               <i class="fa-brands fa-linkedin"></i>
+           </a>
         </div>
         <div class="f-info-brand">&copy; Wanderlust Private Limited</div>
         <div class="f-info-links">
