Added Instagram icon link

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -2,7 +2,9 @@
     <div class="f-info">
         <div class="f-info-socials">
            <i class="fa-brands fa-square-facebook"></i>
-           <i class="fa-brands fa-square-instagram"></i>
+           <a href="https://www.instagram.com/listings_airbnb?igsh=ZmE1eHhlYjlydnJ6&utm_source=ig_contact_invite">
+               <i class="fa-brands fa-square-instagram"></i>
+           </a>
            <a href="https://www.linkedin.com/company/ty_listing_123_airbnb/about/?viewAsMember=true" >
                <i class="fa-brands fa-linkedin"></i>
            </a>
