Added Facebook icon link

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,7 +1,10 @@
 <footer>
     <div class="f-info">
         <div class="f-info-socials">
-           <i class="fa-brands fa-square-facebook"></i>
+            <a href="https://www.facebook.com/profile.php?id=100068195210091">
+               <i class="fa-brands fa-square-facebook"></i>
+            </a>
+           
            <a href="https://www.instagram.com/listings_airbnb?igsh=ZmE1eHhlYjlydnJ6&utm_source=ig_contact_invite">
                <i class="fa-brands fa-square-instagram"></i>
            </a>
